k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackathon-api
  namespace: default
  labels:
    app: hackathon-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hackathon-api
  template:
    metadata:
      labels:
        app: hackathon-api
    spec:
      containers:
      - name: api
        image: 10.6.0.190/thomas_d/api:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hackathon-api-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hackathon-api
  ports:
    - port: 80
      targetPort: 80
